--- a/client/src/main/resources/clientViews/client-make-request.fxml
+++ b/client/src/main/resources/clientViews/client-make-request.fxml
@@ -9,12 +9,12 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bsuir.green.controller.Client.ClientCreateRequestController">
     <children>
         <Button fx:id="createRequest" layoutX="381.0" layoutY="304.0" mnemonicParsing="false" onAction="#onCreateRequestButton" text="Создать" />
-        <TextField fx:id="detailName" layoutX="291.0" layoutY="98.0" />
+        <TextField fx:id="detailName" layoutX="291.0" layoutY="98.0" promptText="Название" />
         <Label layoutX="155.0" layoutY="102.0" text="Название детали" />
         <Label layoutX="168.0" layoutY="162.0" prefHeight="18.0" prefWidth="67.0" text="Тип детали" />
         <ComboBox fx:id="cbDetailType" layoutX="290.0" layoutY="159.0" prefWidth="150.0" promptText="тип детали" />
         <Label layoutX="168.0" layoutY="214.0" prefHeight="18.0" prefWidth="67.0" text="Сотрудник" />
-        <ComboBox fx:id="cbChosenStuff" layoutX="290.0" layoutY="211.0" prefWidth="150.0" />
+        <ComboBox fx:id="cbChosenStuff" layoutX="290.0" layoutY="211.0" prefWidth="150.0" promptText="сотрудник" />
       <Button fx:id="backButton" layoutX="155.0" layoutY="304.0" mnemonicParsing="false" onAction="#onBackButton" text="Назад" />
     </children>
 </AnchorPane>
