--- a/client/src/main/resources/adminViews/admin-create-report-view.fxml
+++ b/client/src/main/resources/adminViews/admin-create-report-view.fxml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bsuir.green.controller.Admin.AdminReportTableController">
+<AnchorPane prefHeight="512.0" prefWidth="940.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bsuir.green.controller.Admin.AdminReportTableController">
    <children>
-      <TableView fx:id="infoTable" layoutY="100.0" prefHeight="525.0" prefWidth="940.0">
+      <TableView fx:id="infoTable" layoutX="8.0" layoutY="4.0" prefHeight="348.0" prefWidth="926.0">
         <columns>
           <TableColumn fx:id="columnDetail" prefWidth="216.800048828125" text="Деталь">
                <columns>
@@ -35,9 +34,10 @@
             <TableColumn fx:id="columnDate" prefWidth="115.20001220703125" text="Дата" />
         </columns>
       </TableView>
-      <TextField fx:id="dataInputField" layoutX="320.0" layoutY="38.0" promptText="введите дату" />
-      <Button fx:id="makeGeneralReportBtn" layoutX="838.0" layoutY="14.0" mnemonicParsing="false" onAction="#onMakeGeneralReportBtn" text="За всё время" />
-      <Button fx:id="makeReport" layoutX="499.0" layoutY="38.0" mnemonicParsing="false" onAction="#onMakeReportButton" text="Ввод" />
-      <Button fx:id="backButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#onBackButton" text="Назад" />
+      <Button fx:id="makeGeneralReportBtn" layoutX="827.0" layoutY="410.0" mnemonicParsing="false" onAction="#onMakeGeneralReportBtn" text="За всё время" />
+      <Button fx:id="makeReport" layoutX="522.0" layoutY="410.0" mnemonicParsing="false" onAction="#onMakeReportButton" text="Просмотртеть" />
+      <Button fx:id="backButton" layoutX="24.0" layoutY="410.0" mnemonicParsing="false" onAction="#onBackButton" text="Назад" />
+      <DatePicker fx:id="startDate" layoutX="305.0" layoutY="397.0" prefHeight="26.0" prefWidth="195.0" promptText="начальная дата" />
+      <DatePicker fx:id="endDate" layoutX="305.0" layoutY="429.0" prefHeight="26.0" prefWidth="195.0" promptText="конечная дата" />
    </children>
 </AnchorPane>
